Add multi account blling

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 22
-        versionName "2.0.0 - Beta"
-        versionCode 200
+        versionName "2.1.0"
+        versionCode 210
     }
 
     signingConfigs {
