--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
-    <!--<uses-permission android:name="com.android.vending.BILLING"/>-->
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
         android:name="com.alorma.github.GitskariosApplication"
