--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
-                <data
-                    android:scheme="gitskarios" />
+                <data android:scheme="@string/oauth_scheme" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
