--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
         versionCode 231
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
     signingConfigs {
         playStore {
             storeFile file(SIGN_FILE)
@@ -58,6 +62,9 @@ dependencies {
     compile 'com.android.support:palette-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.android.support:cardview-v7:21.0.3'
+
+    compile 'com.google.android.gms:play-services-analytics:7.0.0'
+
     compile project(':sdk')
     // Submodules
     compile project(':libraries:AndroidGithubIcons')
