--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
 
     compile project(':sdk')
     // Submodules
-    compile project(':libraries:AndroidGithubIcons')
+    //compile project(':libraries:AndroidGithubIcons')
     compile project(':libraries:android-floating-action-button')
     compile 'com.github.alorma:diff-textview:1.0.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
@@ -82,6 +82,9 @@ dependencies {
     compile('de.psdev.licensesdialog:licensesdialog:1.6.0') {
         exclude module: 'support-v4'
     }
+
+    compile 'com.mikepenz.iconics:octicons-typeface:2.2.0@aar'
+
     compile 'com.github.d-max:spots-dialog:0.1'
     compile 'com.hannesdorfmann.smoothprogressbar:library:1.0.0'
     compile 'com.squareup:otto:1.3.6'
