--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
         transitive = true;
     }
+    compile('com.mikepenz.aboutlibraries:library:4.5.9@aar') {
+        transitive = true
+    }
 
     compile 'com.github.mrengineer13:snackbar:1.1.0'
     compile 'com.wefika:flowlayout:0.4.0'
