--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':sdk', ':libraries:AndroidGithubIcons', ':libraries:android-floating-action-button'
+include ':app', ':sdks:GithubAndroidSdk', ':libraries:android-floating-action-button', ':sdks:BaseSDK'
