--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
     <application
         android:name="com.alorma.github.GitskariosApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme"
         android:launchMode="singleInstance">
         <activity
-            android:name="com.alorma.github.ui.activity.LoginActivity">
+            android:name="com.alorma.github.ui.activity.LoginActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
