--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,28 +68,31 @@ dependencies {
 
 
     // Submodules
-    //compile project(':libraries:AndroidGithubIcons')
     compile project(':libraries:android-floating-action-button')
-    compile 'com.github.alorma:diff-textview:1.0.0'
+
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
+
     compile 'com.afollestad:material-dialogs:0.7.3.3'
+
     compile 'se.emilsjolander:stickylistheaders:2.5.2'
-    compile('de.psdev.licensesdialog:licensesdialog:1.6.0') {
-        exclude module: 'support-v4'
-    }
+
+    compile 'com.nineoldandroids:library:2.4.0'
 
     compile 'com.mikepenz.iconics:octicons-typeface:2.2.0@aar'
 
     compile 'com.github.d-max:spots-dialog:0.3'
+
     compile 'com.hannesdorfmann.smoothprogressbar:library:1.0.0'
+
     compile 'com.squareup:otto:1.3.6'
+
     compile 'com.squareup.dagger:dagger:1.2.2'
+
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
+
     compile ('com.mikepenz.materialdrawer:library:2.9.2@aar') {
         transitive = true
     }
-    compile 'com.squareup.picasso:picasso:2.3.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
         transitive = true;
     }
@@ -98,5 +101,6 @@ dependencies {
     }
 
     compile 'com.github.mrengineer13:snackbar:1.1.0'
+
     compile 'com.wefika:flowlayout:0.4.0'
 }
