--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,8 @@ dependencies {
     // Submodules
     compile project(':libraries:android-floating-action-button')
 
+    compile project (':libraries:breadcrumbs')
+
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
 
     compile 'com.afollestad:material-dialogs:0.7.3.3'
