--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':sdks:GithubAndroidSdk', ':libraries:android-floating-action-button', ':sdks:BaseSDK'
+include ':app', ':sdks:GithubAndroidSdk', ':libraries:android-floating-action-button', ':sdks:BaseSDK', ':libraries:breadcrumbs'
