Created base for PRs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,7 @@
             android:label="@string/title_activity_new_issue"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name="com.alorma.github.ui.activity.IssueDetailActivity" />
+        <activity android:name="com.alorma.github.ui.activity.PullRequestDetailActivity" />
         <activity
             android:name="com.alorma.github.ui.activity.SettingsActivity"
             android:label="@string/title_activity_settings" />
