--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,36 +75,21 @@ dependencies {
     compile 'com.android.support:palette-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
-
     compile 'com.google.android.gms:play-services-analytics:7.5.0'
-
-
     debugCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'debug')
     releaseCompile project(path: ':sdks:GithubAndroidSdk', configuration: 'release')
-
     // Submodules
     compile project(':libraries:android-floating-action-button')
-
-    compile project (':libraries:breadcrumbs')
-
+    compile project(':libraries:breadcrumbs')
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
-
     compile 'com.afollestad:material-dialogs:0.7.6.0'
-
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
-
     compile 'com.nineoldandroids:library:2.4.0'
-
     compile 'com.mikepenz.iconics:octicons-typeface:2.2.0@aar'
-
     compile 'com.github.d-max:spots-dialog:0.3'
-
     compile 'com.squareup:otto:1.3.8'
-
     compile 'com.squareup.dagger:dagger:1.2.2'
-
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
-
     compile('com.mikepenz:materialdrawer:3.0.8@aar') {
         transitive = true
     }
@@ -114,8 +99,7 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.0.5@aar') {
         transitive = true
     }
-
     compile 'com.github.mrengineer13:snackbar:1.2.0'
-
     compile 'com.wefika:flowlayout:0.4.0'
+    compile 'com.github.alorma:diff-textview:1.1.0'
 }
