Add emojis provider

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,4 +132,5 @@ dependencies {
     compile 'com.github.alorma:diff-textview:1.1.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
+    compile 'io.realm:realm-android:0.81.1'
 }
