Add Atelier modified to get color

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+sudo: false
 android:
   components:
    - build-tools-22.0.1
@@ -17,4 +18,4 @@ branches:
 notifications:
   email: false
 
-script: ./gradlew assembleDebug crashlyticsUploadDistributionDebug
+script: ./gradlew assembleDebug
