--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,8 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
