--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     // Submodules
 
     compile project(':libraries:breadcrumbs')
+    compile project(':libraries:atelier')
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile('com.mikepenz:materialdrawer:3.0.8@aar') {
         transitive = true
@@ -133,5 +134,6 @@ dependencies {
     compile 'com.android.support:design:22.2.0'
     compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
     compile 'io.realm:realm-android:0.81.1'
-    compile 'com.binaryfork:spanny:1.0.2'
+//    compile 'com.binaryfork:spanny:1.0.2'
+//    compile 'com.github.Musenkishi:Atelier:1.3.1'
 }
