Change content of the issue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,7 @@
         <activity android:name=".ui.activity.SearchIssuesActivity" />
         <activity android:name=".ui.activity.PullRequestCommitsActivity" />
         <activity android:name=".ui.activity.PullRequestFilesActivity" />
+        <activity android:name=".ui.activity.ContentEditorActivity" />
 
         <activity android:name="com.alorma.github.emoji.EmojisActivity"
             android:label="@string/emoji_activity"/>
