--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,8 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.0.6@aar') {
         transitive = true
     }
+    compile 'com.github.xiprox.errorview:library:2.+'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:palette-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
@@ -131,7 +133,6 @@ dependencies {
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile 'com.wefika:flowlayout:0.4.0'
     compile 'com.github.alorma:diff-textview:1.1.0'
-    compile 'com.android.support:design:22.2.0'
     compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
     compile 'io.realm:realm-android:0.81.1'
 //    compile 'com.binaryfork:spanny:1.0.2'
