--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,7 @@ dependencies {
     compile 'com.github.alorma:diff-textview:1.1.0'
     compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
     compile 'io.realm:realm-android:0.81.1'
+    compile 'com.timehop.stickyheadersrecyclerview:library:0.4.1@aar'
 //    compile 'com.binaryfork:spanny:1.0.2'
 //    compile 'com.github.Musenkishi:Atelier:1.3.1'
 }
