--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,12 @@ branches:
 
 notifications:
   email: false
+  webhooks:
+
+urls:
+      - https://webhooks.gitter.im/e/9234768c960fbc35d489
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
 
 script: ./gradlew assembleDebug
