Move people page from dashboard, to a fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         </activity>
         <activity android:name=".ui.activity.MainActivity" />
         <activity
-            android:name=".ui.activity.PeopleActivity"
+            android:name=".ui.activity.GeneralPeopleFragment"
             android:label="@string/navigation_people" />
         <activity android:name=".ui.activity.ProfileActivity" />
         <activity android:name=".ui.activity.CommitDetailActivity" />
