--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,12 +117,12 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.0.6@aar') {
         transitive = true
     }
-    compile 'com.github.xiprox.errorview:library:2.+'
+    compile 'com.github.xiprox.errorview:library:2.2.0'
     compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:palette-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:palette-v7:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.google.android.gms:play-services-analytics:7.5.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'com.afollestad:material-dialogs:0.7.6.0'
