--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,17 @@ android {
         playStore
     }
 
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
+
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
@@ -140,4 +151,7 @@ dependencies {
 
 //    compile 'com.binaryfork:spanny:1.0.2'
 //    compile 'com.github.Musenkishi:Atelier:1.3.1'
+
+    compile 'com.github.pedrovgs:renderers:2.0.3'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
