--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,7 +129,7 @@ dependencies {
         transitive = true
     }
     compile 'com.github.xiprox.errorview:library:2.2.0'
-    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:palette-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
@@ -148,7 +148,7 @@ dependencies {
     compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
     compile 'io.realm:realm-android:0.81.1'
     compile 'com.timehop.stickyheadersrecyclerview:library:0.4.1@aar'
-
+    compile 'com.afollestad:material-cab:0.1.4'
 //    compile 'com.binaryfork:spanny:1.0.2'
 //    compile 'com.github.Musenkishi:Atelier:1.3.1'
 
