--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         <activity android:name=".ui.activity.OrganizationActivity" />
         <activity android:name=".ui.activity.ReleaseDetailActivity" />
         <activity android:name=".ui.activity.CompareRepositoryCommitsActivity" />
+        <activity android:name=".ui.activity.ManageRepositoryActivity"
+            android:label="@string/repository_settings"/>
         <activity
             android:name=".Interceptor"
             android:theme="@android:style/Theme.NoDisplay" >
